Fix page overflow

--- a/src/sass/events.scss
+++ b/src/sass/events.scss
@@ -60,10 +60,9 @@
 .events-all {
     background-color: red;
     .events-link {
-        display: block;
-        padding: 20px;
+        padding: 20px 0;
+        display: inline-block;
         width: 100%;
-        height: 100%;
         color: whitesmoke;
         font-size: 2.2rem;
     }
